# dynodmize

./: Cargo.toml  README.md
src/demo_app/: Cargo.toml
src/demo_app/src/: entity2tings.rs  expanded.rs  main.rs
src/entity_core/: Cargo.toml
src/entity_core/src/: lib.rs
src/entity_macros/: Cargo.toml
src/entity_macros/src/: codegen.rs  lib.rs  parser.rs  schema.rs
src/example_app/: Cargo.toml
src/example_app/src/: entity2tings.rs  main.rs  recurring_payments.rs  social_network.rs
